syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

option go_package = "upgraded-goggles/api/proto/user";

// Сообщение пользователя
message User {
    int64 id = 1;
    string username = 2;
    string email = 3;
    google.protobuf.Timestamp created_at = 4;
}

// Запрос на регистрацию пользователя
message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

// Ответ регистрации с данными пользователя
message RegisterResponse {
    User user = 1;
}

// Запрос на авторизацию пользователя
message LoginRequest {
    string email = 1;
    string password = 2;
}

// Ответ авторизации с JWT-токеном и данными пользователя
message LoginResponse {
    string token = 1;
    User user = 2;
}

// Запрос для получения информации о пользователе
message UserRequest {
    int64 id = 1;
}

// Сервис для управления пользователями
service UserService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {
        option (google.api.http) = {
            post: "/v1/users/register"
            body: "*"
        };
    }
    rpc Login(LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/v1/users/login"
            body: "*"
        };
    }
    rpc GetUser(UserRequest) returns (User) {
        option (google.api.http) = {
            get: "/v1/users/{id}"
        };
    }
}
